# algorithms

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.py
binary_search/: main.cpp
consumer/: CMakeLists.txt  conanfile.py  main.cpp
include/: error.h  hello_world.h
include/cool/algorithms/: sort.h
include/cool/containers/sequential/: list.h  stack.h  vector.h
insertion_sort/: main
recursion/factorial/: main  main.cpp
recursion/fibonacci/: main  main.cpp
recursion/palindrome/: main  main.cpp
searching/binary_search/: main
selection_sort/: main  main.cpp
sorting/insertion_sort/: main  main.cpp
sorting/merge_sort/: main  main.cpp
sorting/quick_sort/: main  main.cpp
sorting/selection_sort/: main  main.cpp
src/: hello_world.cpp
test/: CMakeLists.txt  list_test.cpp  sort_test.cpp  stack_test.cpp  test_hello_world.cpp  test_list.cpp  test_vector.cpp  vector_test.cpp
